--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1874,6 +1874,9 @@
     <ClCompile Include="UVa\10000\10020.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\600\699.cpp">
+      <Filter>UVa\600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
