--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1877,6 +1877,9 @@
     <ClCompile Include="UVa\600\699.cpp">
       <Filter>UVa\600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\111.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
