--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1880,6 +1880,9 @@
     <ClCompile Include="UVa\100\111.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\193.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
