--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1883,6 +1883,9 @@
     <ClCompile Include="UVa\100\193.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\492.cpp">
+      <Filter>UVa\400\490</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
