--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1886,6 +1886,9 @@
     <ClCompile Include="UVa\400\492.cpp">
       <Filter>UVa\400\490</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\539.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
