--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1892,6 +1892,9 @@
     <ClCompile Include="UVa\300\371.cpp">
       <Filter>UVa\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10139.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
