--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1898,6 +1898,9 @@
     <ClCompile Include="UVa\600\639.cpp">
       <Filter>UVa\600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10616.cpp">
+      <Filter>UVa\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
