--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1904,6 +1904,9 @@
     <ClCompile Include="UVa\11600\11650.cpp">
       <Filter>UVa\11600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10115.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
