--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1907,6 +1907,9 @@
     <ClCompile Include="UVa\10100\10115.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11000\11085.cpp">
+      <Filter>UVa\11000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
