--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1913,6 +1913,9 @@
     <ClCompile Include="UVa\100\155.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\900\908.cpp">
+      <Filter>UVa\900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
