--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1922,6 +1922,9 @@
     <ClCompile Include="UVa\700\714.cpp">
       <Filter>UVa\700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10341.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
