--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1931,6 +1931,9 @@
     <ClCompile Include="UVa\11200\11233.cpp">
       <Filter>UVa\11200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10344.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
