--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1934,6 +1934,9 @@
     <ClCompile Include="UVa\10300\10344.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11700\11747.cpp">
+      <Filter>UVa\11700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
