--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1940,6 +1940,9 @@
     <ClCompile Include="UVa\10000\10014.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\300\394.cpp">
+      <Filter>UVa\300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
