--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1943,6 +1943,9 @@
     <ClCompile Include="UVa\300\394.cpp">
       <Filter>UVa\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\152.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
