--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1949,6 +1949,9 @@
     <ClCompile Include="UVa\10100\10176.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10037.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
