--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1952,6 +1952,9 @@
     <ClCompile Include="UVa\10000\10037.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10392.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
