--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1955,6 +1955,9 @@
     <ClCompile Include="UVa\10300\10392.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\900\902.cpp">
+      <Filter>UVa\900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
