--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1958,6 +1958,9 @@
     <ClCompile Include="UVa\900\902.cpp">
       <Filter>UVa\900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10500\10515.cpp">
+      <Filter>UVa\10500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
