--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1961,6 +1961,9 @@
     <ClCompile Include="UVa\10500\10515.cpp">
       <Filter>UVa\10500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11200\11221.cpp">
+      <Filter>UVa\11200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
