--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1964,6 +1964,9 @@
     <ClCompile Include="UVa\11200\11221.cpp">
       <Filter>UVa\11200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10069.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -2203,6 +2206,9 @@
     </None>
     <None Include="UVa\11100\11161.py">
       <Filter>UVa\11100</Filter>
+    </None>
+    <None Include="UVa\10000\10069.py">
+      <Filter>UVa\10000</Filter>
     </None>
   </ItemGroup>
 </Project>
