--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1967,6 +1967,9 @@
     <ClCompile Include="UVa\10000\10069.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11400\11456.cpp">
+      <Filter>UVa\11400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
