--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1973,6 +1973,9 @@
     <ClCompile Include="UVa\10800\10852.cpp">
       <Filter>UVa\10800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11000\11054.cpp">
+      <Filter>UVa\11000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
