--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1976,6 +1976,9 @@
     <ClCompile Include="UVa\11000\11054.cpp">
       <Filter>UVa\11000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10182.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
