--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -309,6 +309,9 @@
     <Filter Include="TopCoder\700\759">
       <UniqueIdentifier>{356e58fe-5e64-433c-80d8-00f902e432a2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="TopCoder\700\758">
+      <UniqueIdentifier>{1c73f7fa-d2f4-4c58-bb9e-df9ae20c101f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source.cpp">
@@ -1987,6 +1990,9 @@
     </ClCompile>
     <ClCompile Include="TopCoder\SRM 700-799\SRM 759\EllysThreePrimes.cpp">
       <Filter>TopCoder\700\759</Filter>
+    </ClCompile>
+    <ClCompile Include="TopCoder\SRM 700-799\SRM 758\LongJump2.cpp">
+      <Filter>TopCoder\700\758</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
