--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2006,6 +2006,9 @@
     <ClCompile Include="UVa\10900\10919.cpp">
       <Filter>UVa\10900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\161.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
