--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2009,6 +2009,9 @@
     <ClCompile Include="UVa\100\161.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11400\11470.cpp">
+      <Filter>UVa\11400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
