--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2012,6 +2012,9 @@
     <ClCompile Include="UVa\11400\11470.cpp">
       <Filter>UVa\11400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10800\10827.cpp">
+      <Filter>UVa\10800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
