--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2021,6 +2021,9 @@
     <ClCompile Include="UVa\11800\11850.cpp">
       <Filter>UVa\11800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10404.cpp">
+      <Filter>UVa\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
