--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2024,6 +2024,9 @@
     <ClCompile Include="UVa\10400\10404.cpp">
       <Filter>UVa\10400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\1500\1583.cpp">
+      <Filter>UVa\1500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
