--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2033,6 +2033,12 @@
     <ClCompile Include="Codeforces\600\610\617A.cpp">
       <Filter>Codeforces\600</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\100\110\110A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
+    <ClCompile Include="Codeforces\400\469\469A.cpp">
+      <Filter>Codeforces\400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
