--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2039,6 +2039,9 @@
     <ClCompile Include="Codeforces\400\469\469A.cpp">
       <Filter>Codeforces\400</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\400\450\451A.cpp">
+      <Filter>Codeforces\400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
