--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2042,6 +2042,9 @@
     <ClCompile Include="Codeforces\400\450\451A.cpp">
       <Filter>Codeforces\400</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\700\700\705A.cpp">
+      <Filter>Codeforces\700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
