--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2054,6 +2054,9 @@
     <ClCompile Include="Codeforces\1000\1030\1030A.cpp">
       <Filter>Codeforces\1000</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\400\470\479A.cpp">
+      <Filter>Codeforces\400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
