--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2057,6 +2057,9 @@
     <ClCompile Include="Codeforces\400\470\479A.cpp">
       <Filter>Codeforces\400</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\100\110\118A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
