--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2084,6 +2084,9 @@
     <ClCompile Include="Codeforces\700\720\723A.cpp">
       <Filter>Codeforces\700</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\200\280\282A.cpp">
+      <Filter>Codeforces\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
