--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2114,6 +2114,9 @@
     <ClCompile Include="Codeforces\900\980\987A.cpp">
       <Filter>Codeforces\900</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1000\1080\1088A.cpp">
+      <Filter>Codeforces\1000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
