--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2123,6 +2123,12 @@
     <ClCompile Include="Codeforces\800\870\879A.cpp">
       <Filter>Codeforces\800</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\700\740\745A.cpp">
+      <Filter>Codeforces\700</Filter>
+    </ClCompile>
+    <ClCompile Include="Codeforces\1\60\69A.cpp">
+      <Filter>Codeforces\1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
